# TradingRL

./: .gitignore  1. base_rl_test.ipynb  10. prod_train_and_backtest.ipynb  2. base_rl_tes_v2.ipynb  5. test_v4_simple.ipynb  CLAUDE.md  PROJECT_OVERVIEW.md  README.md  debug_flip.py  debug_nans.py  make_nb.py  pyproject.toml  requirements.txt  test_model_actions.py
.agents/: AGENTS.md
agents/: callbacks.py  double_dqn_agent.py  double_dqn_agent_for_frames.py  dqn_agent.py  dqn_agent_for_frames.py  dqn_agent_old.py  extractors.py  networks.py  ppo_agent.py  prioritized_replay_buffer.py  random_agent.py
core/: config.py  utils.py
core/data/: binance_loader.py  binance_source.py  bybit_source.py  cached_data_source.py  (+4 more)
custom_envs/: base_trading_env.py  trading_env_frame_stack.py  trading_env_v1.py  trading_env_v1_torch.py  trading_env_v2.py  trading_env_v3.py  trading_env_v4.py  trading_env_v5.py  trading_env_v6.py
models/: hmm_model.pkl
notebooks/: 10. prod_train_and_backtest.ipynb  11. feature_importance.ipynb  12. train_transformer_multi_asset.ipynb  14. evaluate_model.ipynb  6. test_v5_simple.ipynb  7. train_ppo.ipynb  8. train_ppo_advanced.ipynb  9. walk_forward_validation.ipynb
scripts/: benchmark_agent.py  benchmark_device_batch.py  benchmark_hardware.py  compare_envs.py  demo_historical_oi.py  download_data.py  prepare_multi_asset.py  train_dqn_agent.py  train_hmm.py  train_ppo_purged.py  tune_ppo.py  validate_dqn_agent.py
tests/: test_agent_buffer_integration.py  test_data_loader.py  test_data_sources.py  test_oos_eval_callback.py  test_prioritized_replay_buffer.py  test_smart_cache_loader.py  test_trading_env_flip.py  test_trading_env_v4_edge_cases.py
utils/: binance_loader.py  binance_source.py  cached_data_source.py  data_loader.py  data_sources.py  experiment_manager.py  feature_generator.py  multi_source_loader.py  train_dqn_agent.py  utils.py  validate_dqn_agent.py  validation.py  visualizer_candles.py
(+6 files in other folders)
