[project]
name = "trading-rl"
version = "0.1.0"
description = "Deep Reinforcement Learning for crypto trading"
requires-python = ">=3.12"
dependencies = [
    "gymnasium==1.1.1",
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "requests==2.32.3",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "pyarrow",
    "fastparquet",
    "nbformat>=4.2.0",
    "seaborn",
    "scipy>=1.10",
    "duckdb>=1.5.4",
    "jupyter>=1.1.1",
    "jupyter-client>=8.9.1",
    "hmmlearn>=0.3.3",
    "stable-baselines3[extra]>=2.9.0",
    "wandb>=0.28.0",
    "tensorboard>=2.20.0",
    "setuptools<70",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest==8.3.5",
    "black",
    "isort",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "custom_envs", "scripts"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
